typescript/checker/tests/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement12.ts.stderr
error: UndefinedSymbol {
    sym: Atom('X' type=inline),
    span: Span {
        lo: BytePos(
            36,
        ),
        hi: BytePos(
            37,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement12.ts:2:22
  |
2 | for (const {a, b} of X) {
  |                      ^

